--- a/4-guia/ejercicios-4-extra/ej-extra-12-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-12-4.tex
@@ -37,7 +37,7 @@ Si $D \divideA A^6$ entonces la \textit{descomposición en primos} de $D = p_1^{
 tiene que tener solo factores de la \textit{descomposición en primos} de
 $A^6 = p_1^{\blue{i}} \cdots p_n^{\blue{j}} \cdot p_{n+1}^{\blue{k}} \cdots p_m^{\blue{l}}$ con los exponentes de los
 factores de $D\, (\purple{i_d}, \purple{j_d},\dots),$  menores o iguales a los exponentes de
-$A\, (\blue{i}, \blue{j}, \dots)$ de manera que al dividir:
+$A^6\, (\blue{i}, \blue{j}, \dots)$ de manera que al dividir:
 $$
   \frac{A^6}{D}
   =
@@ -65,7 +65,7 @@ Eso es que $D \divideA A^6$ ni más ni menos.\par
 Y sí, \textit{muy rico todo}, pero esa cantinela es la misma para $D \divideA B^6$, \red{pero} la
 \textit{descomposición en primos} de $B^6$ tiene los $p_i$ \textbf{distintos} a los de $A^6$, porque
 \red{¡}$(A^6:B^6) = 1$\red{!} y ahí llegamos al \underline{absurdo}. $D$ no puede dividir a ambos
-a la vez, \red{porque son coprimos {\tiny(\sout{la puta madre!}) }} a menos que $D = 1$ \Tilde.
+a la vez, \red{porque son coprimos {\small\faIcon{brain}} }, a menos que $D = 1$ \Tilde.
 
 $$
   D = 1 \entonces \boxed{d = 7^6}, \text{para cada } (a,b) \en \enteros^2 \Big / (a:b) = 7
