--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -108,8 +108,8 @@
 
 \newcommand{\Hacer}{{\color{black!30!red}\Large Hacer!}}
 \def\Tilde{\quad\checkmark}
-\def\ytext{\text{ y }}
-\def\otext{\text{ o }}
+\def\ytext{\quad\text{y}\quad}
+\def\otext{\quad\text{o}\quad}
 
 % Estrellita para hacer llamadas de atención, viene en divertidos colores
 % para coleccionar.
