--- a/1-guia/ejercicios-1-extra/ej-extra-4-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-4-1.tex
@@ -124,22 +124,26 @@
             \congruencia{m}{j}{2} \llamada2
           }
         $$
+
         entonces
 
         $$
+          \left.
           \begin{array}{c}
             \congruencia{n^2 \magenta{- m^2 + m} - n}{0}{5}
-                  \Sii{\llamada1}[\red{!}]
+            \Sii{\llamada1}[\red{!}]
             \congruencia{n^2 \magenta{- j^2 + j} - n}{0}{5}
-                  \\
-            \ytext                                          \\
+            \\
+            \ytext \\
             \congruencia{n}{m}{2}
             \Sii{\llamada2}
             \congruencia{n}{j}{2}
           \end{array}
+          \right\}
           \entonces
           \boxed{
             n \relacion j}
         $$\par
-        La relación es \textit{transitiva}.
+        La relación es \textit{transitiva}.\par
+        Como la relación resultó ser \textit{reflexiva, simétrica y transitiva,} entonces es de equivalencia. Fin.
 \end{enumerate}
