--- a/1-guia/ejercicios-1/ej-12-1.tex
+++ b/1-guia/ejercicios-1/ej-12-1.tex
@@ -175,7 +175,7 @@
                 La proposición es verdadera. Si $x > 3 \entonces x^2 > 9 \flecha{en}[particular] x^2 > 9 > 4 \entonces x^2 > 4$
 
           \item Si $n$ es un natural terminado en 4, entonces $n$ es par.\par
-                \red{hacer}
+                  \hacer
 
           \item Si $z$ es un número real, entonces $z \en \complejos$.\par
                 Están proponiendo que dado
@@ -213,7 +213,7 @@
                   } \to \doceiiE
                 \]
 
-          \item \red{hacer}
+          \item \hacer
 
 
           \item Si $z$ no es un número real, entonces $z \notin \complejos$.\par
