--- a/2-guia/ejercicios-2/ej-15-2.tex
+++ b/2-guia/ejercicios-2/ej-15-2.tex
@@ -7,14 +7,14 @@
     \item
           Sea $(a_n)_{n\ en \naturales}$ la sucesión de números reales definida recursivamente por
           $$
-            a_1 = 2 \quad\ytext\quad a_{n+1} = 2 n a_n+ 2^{n+1}n!,\, \paratodo n \en \naturales
+            a_1 = 2 \ytext a_{n+1} = 2 n a_n+ 2^{n+1}n!,\, \paratodo n \en \naturales
           $$
           Probar que $a_n = 2^n n!$.
 
     \item
           Sea $(a_n)_{n\ en \naturales}$ la sucesión de números reales definida recursivamente por
           $$
-            a_1 = 0 \quad\ytext\quad a_{n+1} = a_n + n(3n + 1),\, \paratodo n \en \naturales
+            a_1 = 0 \ytext a_{n+1} = a_n + n(3n + 1),\, \paratodo n \en \naturales
           $$
           Probar que $a_n = n^2 (n-1)$.
   \end{enumerate}
