--- a/4-guia/ejercicios-4-extra/ej-extra-9-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-9-4.tex
@@ -68,7 +68,7 @@ El único valor de $a \en \enteros$ que cumple lo pedido es \boxed{a = -1}
 Para $a = \red{-1}$ se obtiene $\frac{2a - 1}{5} - \frac{a - 1}{2a - 3} = -1$. Más aún, si hubiese encarado el
 ejercicio con tablas de restos para ver si lo de arriba es divisible por los divisores en $\llamada3$, calcularía:\par
 $$
-  r_5(4a^2 -13a + 8)\quad \ytext \quad r_{25}(4a^2 -13a + 8)
+  r_5(4a^2 -13a + 8) \ytext  r_{25}(4a^2 -13a + 8)
 $$
 
 $
