--- a/4-guia/teoria-4/teoria-4.tex
+++ b/4-guia/teoria-4/teoria-4.tex
@@ -131,7 +131,7 @@
 
   \item Propiedades útiles para los ejercicios de calcular restos:
         $$
-          r_d(a+b) = r_d(r_d(a) + r_d(b))\quad \ytext \quad r_d(a \cdot b) = r_d(r_d(a) \cdot r_d(b))
+          r_d(a+b) = r_d(r_d(a) + r_d(b)) \ytext  r_d(a \cdot b) = r_d(r_d(a) \cdot r_d(b))
         $$
         ya que si,
         $$ \llaves{c}{
