--- a/6-guia/ejercicios-6/ej-13-6.tex
+++ b/6-guia/ejercicios-6/ej-13-6.tex
@@ -3,7 +3,7 @@
   sea $(z_n)_{n \en \naturales}$ la sucesión de números
   complejos definida por:
   $$
-    z_1 = 1+w \quad \ytext \quad z_{n+1} =
+    z_1 = 1+w  \ytext  z_{n+1} =
     \conj{1 + z_n^2},\, \paratodo n \en \naturales.
   $$
 
