Add extra-8-7 y alguna que otra cosita

--- a/7-guia/ejercicios-7-extra/ej-extra-9-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-9-7.tex
@@ -1,7 +1,7 @@
 \begin{enunciado}{\ejExtra}
         Hallar $f \en \racionales[X]$ de grado mínimo tal que cumpla las siguientes condiciones
 	\begin{itemize}
-		\item $f$ comparte una raíz con $x^3 - 3X^2 + 7X -5$
+		\item $f$ comparte una raíz con $X^3 - 3X^2 + 7X -5$
         \item $X+3-\sqrt{2} \divideA f$,
         \item $1-2 i$ es raíz de $f$ y $f'(X-2i) = 0$
 	\end{itemize}
