--- a/7-guia/ejercicios-7/ej-12-7.tex
+++ b/7-guia/ejercicios-7/ej-12-7.tex
@@ -1,8 +1,7 @@
-\ejercicio
-
+%!TEX root = ../7-sol.tex
+\begin{enunciado}{\ejercicio}
 Hallar la forma binomial de cada una de las raíces complejas del polinomio $f(X) = X^6 + X^3 - 2$.
-
-\separadorCorto
+\end{enunciado}
 
 Primera raíz: $f(\alpha_1 = 1) = 0 \to f(X) = q(X) \cdot (X - 1)$. Busco $q(X)$ con algoritmo de división.\\
 \polylongdiv[style=D]{X^6 + X^3 - 2 }{X - 1}\\
