--- a/7-guia/teoria-7/teoria-7.tex
+++ b/7-guia/teoria-7/teoria-7.tex
@@ -36,7 +36,7 @@
           \item Dos polinomios son coprimos si $(f:g) = 1 \sisolosi f \distinto g$
         \end{itemize}
 
-  \item \textit{Raíces múltiples:}\par
+\item \hypertarget{teoria:raicesMultiples}{\textit{Raíces múltiples:}}\par
         Sea $f \en \K[x]$ no nulo, y sea $\alpha \en \K$. Se dice que:
         \begin{itemize}[label=\tiny \faIcon{meh}]
           \item Cuando $f$ tiene una raíz múltiple:
